--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,7 @@
 	"version_number": "1.0.0",
 	"description": "Better Chance for Legendary Weapons",
 	"website_url": "",
-	"dependencies": [
-		"Darkly77-ContentLoader"
-
-	],
+	"dependencies": [],
 	"extra": {
 		"godot": {
 			"load_before": [],
