--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "BetterChanceForLegendaryWeapons",
 	"namespace": "Eltoro0815",
-	"version_number": "1.0.0",
+	"version_number": "1.1.0",
 	"description": "Better Chance for Legendary Weapons",
 	"website_url": "",
 	"dependencies": [],
@@ -14,7 +14,7 @@
 				"Eltoro0815"
 			],
 			"compatible_mod_loader_version": ["6.2.0"],
-			"compatible_game_version": ["1.0.1.3"]
+			"compatible_game_version": ["1.0.1.3", "1.1.0.0.beta-9","1.1.0.0-beta-dlc.42d"]
 		}
 	}
 }
